--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".PhotoPageActivity"/>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDSR-GaTnvEfPfAWCv-6yH285wwBdzCv5c" />
     </application>
 
 </manifest>
